--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -502,6 +502,8 @@ body
 		width: 100%
 		background: $bg-darkblue
 		border: 1px solid $color-white
+		max-height: 120px
+		overflow-y: auto
 		// +box-shadow(inset 0 0px 1px #b4bcbf)
 		ul
 			margin: 0
